# neon-homeassistant-skill

./: .gitattributes  .gitignore  .projenrc.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  skill.json  version.py
.github/workflows/: build-test.yml  ci.yaml  pull-request-lint.yml  release.yaml  skill-tests.yml  update_skill_json.yml
.github/workflows/scripts/: update_skill_json.py
.projen/: deps.json  files.json  tasks.json
dialog/en-us/: acknowledge.dialog  area.dashboard.opened.dialog  area.not.found.dialog  device.not.found.dialog  device.turned.on.dialog  ha.dashboard.closed.dialog  vacuum.action.not.found
neon_homeassistant_skill/: __init__.py  version.py
neon_homeassistant_skill/dialog/en-us/: acknowledge.dialog  assist.dialog  assist.not.understood.dialog  device.list.unavailable.dialog  device.status.dialog  device.turned.off.dialog  lights.current.brightness.dialog  lights.current.color.dialog
neon_homeassistant_skill/locale/: skill.json
neon_homeassistant_skill/locale/en-us/: skill.json
neon_homeassistant_skill/locale/en-us/dialog/: assist.error.dialog  device.turned.off.dialog  device.turned.on.dialog  disable.dialog  enable.dialog  ha.dashboard.closed.dialog  ha.dashboard.opened.dialog  lights.status.not.available.dialog  no.parsed.device.dialog
neon_homeassistant_skill/locale/en-us/intents/: assist.intent  disable.intent  enable.intent  get.all.devices.intent  lights.increase.brightness.intent  lights.set.color.intent  open.dashboard.intent  sensor.intent  turn.off.intent
neon_homeassistant_skill/vocab/en-us/: GetDeviceKeyword.voc  GetDevicesKeyword.voc  HomeAssistantKeyword.voc  TurnOffKeyword.voc  TurnOnKeyword.voc  close.dashboard.intent  device.not.found.dialog  get.all.devices.intent  lights.set.brightness.intent  lights.set.color.intent  list.devices.intent  list.devices.types.intent  open.dashboard.intent  sensor.intent  show.area.dashboard.intent  stop.intent
test/: test_intents.yaml  test_resources.yaml  test_skill.py  utils.py
test/e2e/: test_e2e.py
tests/: license_test.py  test_intents.py  test_neon_homeassistant_skill.py  test_standard_ovos.py
vocab/en-us/: close.dashboard.intent  lights.decrease.brightness.intent  lights.get.brightness.intent  lights.get.color.intent  lights.increase.brightness.intent  lights.set.brightness.intent  lights.set.color.intent  sensor.intent  stop.intent  turn.off.intent  turn.on.intent
