[build-system]
requires = [ "poetry_core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "neon-homeassistant-skill"
version = "0.0.12a10"
description = "A Neon AI Skill for Home Assistant, which integrates with ovos-PHAL-plugin-homeassistant."
authors = [ "Mike Gray <mike@graywind.org>" ]
readme = "README.md"
license = "Apache-2.0"
include = ["neon_homeassistant_skill/dialog/*", "neon_homeassistant_skill/vocab/*"]

[tool.poetry.dependencies]
python = "^3.7"
pfzy = "*"
ovos-utils = {version = "*", allow-prereleases = true}
ovos-bus-client = {version = "*", allow-prereleases = true}
ovos-workshop = {version = "~=0.0.12a27", allow-prereleases = true}

[tool.poetry.group.dev.dependencies]
pytest = "*"
pylint = "*"
flake8 = "*"
pydocstyle = "*"
pycodestyle = "*"
black = "*"
mypy = "*"
bandit = "*"
types-pyyaml = "*"
ovos-core = {version = "*", allow-prereleases = true}
ovos-skills-manager = {version = "*", allow-prereleases = true}
padacioso = {version = "*", allow-prereleases = true}
adapt-parser = {git = "https://github.com/mycroftai/adapt"}

[tool.poetry.scripts]
"neon-homeassistant-skill" = "neon_homeassistant_skill:NeonHomeAssistantSkill"

[tool.poetry.plugins."ovos.plugin.skill"]
"neon_homeassistant_skill.mikejgray" = "neon_homeassistant_skill:NeonHomeAssistantSkill"
